objects/Reason_Code_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Reason_Code_Details__c</fullName>
        <label>Reason Code Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Sub_detail__c</fullName>
        <label>Reason Sub-detail</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Reason Code Config</label>
</CustomObject>